# network-services

./: .gitmodules  README.md
StartNewServer/: Dockerfile  README.md  docker-compose.yml  filebeat.docker.yml  node.http  package-lock.json  package.json
StartNewServer/network services/: DHCP.bru  bruno.json
StartNewServer/src/: rabbitmq-elasticsearch.js  setup.js
docs/: aspectos-rede-local.md  basic-services-golang.md  camera-do-celular.md  dns.md  faculdade  faculdade.md  firewall.md  funcionamento.md  implementação-rede-local.md  rede.md  simulação.md  softwares.md
pkg/FTP/: go.mod  go.sum  main.go
pkg/TCP/: TCP.md  echo_server.go  main.go  testando_server_echo_tcp.md
pkg/client_dhcp/: README.md  client-dhcp.md  main  main.go
pkg/dhcp-simulation-client/: go.mod  main.go
pkg/dhcp-simulation-server/: go.mod  main.go
pkg/dhcp_client/: DHCP_Discover.md  DHCP_Request.md  Dockerfile  go.mod  main
pkg/dhcp_server/: DHCP-0.2.md  DHCP.md  DHCP_Acknowledge.md  DHCP_Offer.md  DHCP_Release.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  processo-de-desenvolvimento-e-estudos.md
pkg/dhcp_server_refactor/: go.mod  server.go
pkg/dns-simulation-cliente/: dns_client.go  go.mod
pkg/session-manager-c/: .clang-tidy  CMakeLists.txt  README.md
pkg/session-manager-c/config/: config.h
pkg/session-manager-c/docker/: Dockerfile
pkg/session-manager-c/include/: session_manager.h
pkg/session-manager-c/src/: main.c  middleware.c  middleware.h  mongo.c  mongo.h  rabbitmq.c  rabbitmq.h  session.c  session.h  token.c  token.h  utils.c  utils.h
(+33 files in other folders)
